- Fixed bug #48188